Fixed color of hero section on mobile, fixed about-icons transition z-index

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -180,7 +180,6 @@
 
 .peek-icon-wrapper:hover {
     transform: translateY(0) rotate(0deg) !important;
-    z-index: 10;
 }
 
 .chat-bubble {
